--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -1,5 +1,5 @@
 <section id="layout" data-transition="slide">
-    <header data-title="Layout" class="extended" data-back="home">
+    <header data-title="Layout" data-back="home">
         <nav class="right">
             <button data-view-section="splash" data-async="app/sections/splash.html" data-label="splash"></button>
         </nav>
