--- a/example/app/sections/form.html
+++ b/example/app/sections/form.html
@@ -2,9 +2,9 @@
     <header data-title="Form Elements" data-back="home"></header>
 
     <nav data-control="groupbar">
-        <a href="#" data-view-article="form-normal" data-label="Profile" class="active"></a>
-        <a href="#" data-view-article="form-indented" data-label="Inbox"></a>
-        <a href="#" data-view-article="form-special" data-label="Map"></a>
+        <a href="#" data-view-article="form-normal" data-label="Normal" class="active"></a>
+        <a href="#" data-view-article="form-indented" data-label="Indented"></a>
+        <a href="#" data-view-article="form-special" data-label="Specials"></a>
     </nav>
 
     <article id="form-normal" class="scroll">
