--- a/example/app/sections/splash.html
+++ b/example/app/sections/splash.html
@@ -1,11 +1,16 @@
 <section id="splash" data-transition="slide">
-    <article class="active indented splash">
-        <img src="http://cdn.tapquo.com/lungo/logo.png"/>
-        <form class="roundeds">
-            <input type="text" placeholder="Your username" id="txt-signup-name" value="">
-            <input type="password" placeholder="Your password" id="txt-signup-password" value="">
-            <a href="#" class="button theme anchor large" data-icon="lock" data-icon="user">Login</a>
-            <a href="#" data-view-section="back" class="button secondary anchor" data-icon="home">Return to Kichensink</a>
-        </form>
+    <article class="active splash">
+        <img src="http://cdn.tapquo.com/lungo/logo.png" class="logo"/>
+        <div class="form">
+            <fieldset>
+                <input type="text" class="large" placeholder="Your username" id="txt-signup-name" value="">
+            </fieldset>
+            <fieldset>
+                <input type="password" class="large" placeholder="Your password" id="txt-signup-password" value="">
+            </fieldset>
+            <a href="#" class="button large anchor" data-icon="lock" data-icon="user" data-label="Login"></a>
+            <a href="#" data-view-section="back" class="button large secondary anchor" data-icon="home" data-label="Return to kitchensink"></a>
+        </div>
+        <span class="copyright text thin">Copyright (C) 2011-2013 - <span class="text bold">Tapquo S.L.</span></span>
     </article>
 </section>
