--- a/example/index.html
+++ b/example/index.html
@@ -57,6 +57,8 @@
 </head>
 
 <body class="app">
+
+
     <section id="main" data-transition="" data-aside="features" class="drag">
         <header>
             <nav>
@@ -111,7 +113,7 @@
                     Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
                 </li>
                 <li>
-                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="brand twitter" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
+                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" target="_blank" class="button anchor theme" data-label="Tweet me"></a>
                 </li>
             </ul>
         </article>
