--- a/example/index.html
+++ b/example/index.html
@@ -59,12 +59,14 @@
 <body class="app">
 
 
+
     <section id="main" data-transition="" data-aside="features" class="drag">
         <header>
             <nav>
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
-            <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered">
+            <img src="assets/logo.png" class="title centered">
+
             <nav class="right">
                 <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article"></a>
                 <!--
