New repository of icons
based on http://fortawesome.github.com/

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -48,8 +48,8 @@
             </li>
 
             <!-- Icons -->
-            <li data-view-article="icons" data-async="app/articles/icon.html">
-                <div class="tag right">109</div>
+            <li data-view-article="icon-symbol" data-async="app/articles/icon-symbol.html">
+                <div class="tag right">+250</div>
                 <strong>Icons</strong>
             </li>
 
