--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -21,8 +21,8 @@
         <nav>
             <a href="#" data-view-article="layout-art1" data-icon="home" class="active"></a>
             <a href="#" data-view-article="layout-art2" data-icon="inbox" data-count="80"></a>
-            <a href="#" data-view-article="layout-art3" data-icon="compass"></a>
-            <a href="#" data-view-article="layout-art4" data-icon="settings"></a>
+            <a href="#" data-view-article="layout-art3" data-icon="comments"></a>
+            <a href="#" data-view-article="layout-art4" data-icon="cog"></a>
         </nav>
     </footer>
 </section>
