--- a/example/index.html
+++ b/example/index.html
@@ -47,9 +47,7 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
     <link rel="stylesheet" href="components/lungo.brownie/lungo.icon.css">
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.icon.brand.css">
     <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
-
     <link rel="stylesheet" href="components/lungo.brownie/theme.lungo.css" id="theme-stylesheet">
 
     <!-- App Stylesheet -->
@@ -57,8 +55,6 @@
 </head>
 
 <body class="app">
-
-
 
     <section id="main" data-transition="" data-aside="features" class="drag">
         <header>
@@ -80,9 +76,12 @@
             </nav>
         </header>
 
-        <nav data-control="groupbar" data-article="icons icons-brands">
-            <a href="#" data-view-article="icons" data-label="Normal" data-count="72"></a>
-            <a href="#" data-view-article="icons-brands" data-label="Brands" data-count="37" data-async="app/articles/icon-brand.html" ></a>
+        <nav data-control="groupbar" data-article="icon-symbol icon-media icon-toolbar icon-social icon-item">
+            <a href="#" data-view-article="icon-symbol" data-label="Symbol" data-async="app/articles/icon-symbol.html"></a>
+            <a href="#" data-view-article="icon-media" data-label="Media" data-async="app/articles/icon-media.html"></a>
+            <a href="#" data-view-article="icon-toolbar" data-label="Toolbar" data-async="app/articles/icon-toolbar.html"></a>
+            <a href="#" data-view-article="icon-social" data-label="Social"  data-async="app/articles/icon-social.html"></a>
+            <a href="#" data-view-article="icon-item" data-label="Item" data-async="app/articles/icon-item.html"></a>
         </nav>
 
         <nav data-control="groupbar" data-article="list list-indented list-examples">
