Changes on markup

--- a/example/app/sections/menu.html
+++ b/example/app/sections/menu.html
@@ -1,27 +1,27 @@
 <section id="menu" data-transition="slide">
     <header data-title="data-control=menu">
         <nav>
-            <a href="#" data-view-menu="options" data-icon="map"></a>
+            <a href="#" data-view-menu="options" data-icon="menu"></a>
         </nav>
         <nav class="right">
-            <a href="#" data-view-menu="options-icons" data-icon="map"></a>
+            <a href="#" data-view-menu="options-icons" data-icon="grid"></a>
         </nav>
     </header>
 
     <nav id="options" data-control="menu">
-        <a href="#" data-view-article="home-menu" data-icon="map">Home</a>
-        <a href="#" data-view-article="explore-menu" data-icon="eye">Explore</a>
-        <a href="#" data-view-article="activity-menu" data-icon="chat">Activity</a>
+        <a href="#" data-view-article="home-menu" data-icon="menu">Home</a>
+        <a href="#" data-view-article="explore-menu" data-icon="globe">Explore</a>
+        <a href="#" data-view-article="activity-menu" data-icon="comments">Activity</a>
         <a href="#" data-view-article="profile-menu" data-icon="user">Profile</a>
-        <a href="#" data-view-section="back" data-icon="left">Return</a>
+        <a href="#" data-view-section="back" data-icon="arrow-left">Return</a>
     </nav>
 
     <nav id="options-icons" data-control="menu" class="icons">
-        <a href="#" data-view-article="home-menu" data-icon="map">Home</a>
-        <a href="#" data-view-article="explore-menu" data-icon="eye">Explore</a>
-        <a href="#" data-view-article="activity-menu" data-icon="chat">Activity</a>
+        <a href="#" data-view-article="home-menu" data-icon="grid">Home</a>
+        <a href="#" data-view-article="explore-menu" data-icon="globe">Explore</a>
+        <a href="#" data-view-article="activity-menu" data-icon="comments">Activity</a>
         <a href="#" data-view-article="profile-menu" data-icon="user">Profile</a>
-        <a href="#" data-view-section="back" data-icon="left">Return</a>
+        <a href="#" data-view-section="back" data-icon="arrow-left">Return</a>
     </nav>
 
     <article id="home-menu" class="indented">
