--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -26,12 +26,12 @@
 
 <body class="app">
 
-    <section id="main" data-transition="slide" data-aside="features" data-children="folk ">
+    <section id="main" data-transition="slide" data-aside="features" data-children="folk">
         <header>
             <nav class="left">
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
 
-                <a href="#" data-view-menu="options" data-icon="users"></a>
+                <a href="#" data-view-menu="options" data-icon="star"></a>
 
                 <a href="#" data-icon="user" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
                 <a href="#" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
@@ -47,11 +47,11 @@
         </header>
 
         <nav id="options" data-control="menu" class="icons">
-            <a href="#" data-view-article="folks" data-icon="users" data-title="Folks">Folks</a>
-            <a href="#" data-view-article="products" data-icon="eye" data-title="Explore">Explore</a>
-            <a href="#" data-view-article="article" data-icon="chat">Activity</a>
+            <a href="#" data-view-article="folks" data-icon="star" data-title="Folks">Folks</a>
+            <a href="#" data-view-article="products" data-icon="heart" data-title="Explore">Explore</a>
+            <a href="#" data-view-article="article" data-icon="comments">Activity</a>
             <a href="#" data-view-article="article" data-icon="user">Profile</a>
-            <a href="#" data-view-section="folk" data-icon="user">Folk</a>
+            <a href="#" data-view-section="folk" data-icon="thumbs-up">Folk</a>
         </nav>
 
         <nav data-control="groupbar" data-article="folks">
