--- a/example/test.html
+++ b/example/test.html
@@ -30,9 +30,7 @@
         <header>
             <nav class="left">
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
-
                 <a href="#" data-view-menu="options" data-icon="star"></a>
-
                 <a href="#" data-icon="user" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
                 <a href="#" class="button" data-article="products" data-label="Folks" data-view-article="folks"></a>
                 <a href="#" data-icon="user" class="button" data-article="products" data-view-article="folks"></a>
@@ -56,7 +54,7 @@
 
         <nav data-control="groupbar" data-article="folks">
             <a href="#" data-view-article="folks" data-label="Folks" data-count="11"></a>
-            <a href="#" data-view-article="products" data-async="app/articles/products.html" data-label="Products" data-count="5"></a>
+            <a href="#" data-view-article="products" data-async="app/articles/products.html" data-label="Products" id="products"></a>
         </nav>
 
         <article id="folks" class="active list scroll indente-d">
@@ -289,6 +287,7 @@
 
         Lungo.ready(function() {
             // Lungo.Router.article("main", "sub");
+            Lungo.Element.count("section#main nav #products", 5);
         });
         // Lungo.Notification.show("hola", "user");
 
