New style for .border inputs

--- a/example/test.html
+++ b/example/test.html
@@ -146,7 +146,7 @@
         </div>
     </article>
 
-    <article id="form-special" class="active indented scroll">
+    <article id="form-special" class=" indented scroll">
         <div class="form" >
             <label>Specials</label>
             <fieldset data-icon="search">
@@ -172,7 +172,7 @@
 
             <label>Select your skill</label>
             <label class="select border">
-                <select class="custom">
+                <select>
                     <option value="1">HTML5 Jedi</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
