--- a/example/test.html
+++ b/example/test.html
@@ -14,11 +14,8 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.icon.css">
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
-
-    <link rel="stylesheet" href="components/lungo.brownie/theme.lungo.css" id="theme-stylesheet">
-
+    <link rel="stylesheet" href="components/lungo.brownie/lungo.theme.css">
+    <link rel="stylesheet" href="components/lungo.icon/lungo.icon.css">
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="stylesheets/app.css">
 </head>
