[NEW] Feature: Clean article with a determinate markup

--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -12,14 +12,39 @@
         <a href="#" data-view-article="layout-art4" data-label="Settings"></a>
     </nav>
 
-    <article id="layout-art1" class="active"></article>
-    <article id="layout-art2"></article>
-    <article id="layout-art3"></article>
-    <article id="layout-art4"></article>
+    <article id="layout-art1"><div class="empty">
+            <span class="icon user"></span>
+            <strong>Profile Empty</strong>
+            <small>When you back a project or follow a friend, their activity will show up here.</small>
+            <button class="anchor" data-label="Please update..."></button>
+        </div>
+
+    </article>
+    <article id="layout-art2">
+        <div class="empty">
+            <span class="icon inbox"></span>
+            <strong>Inbox Empty</strong>
+            <small>When you back a project or follow a friend, their activity will show up here.</small>
+        </div>
+    </article>
+    <article id="layout-art3">
+        <div class="empty">
+            <span class="icon comments"></span>
+            <strong>Comments Empty</strong>
+            <small>When you back a project or follow a friend, their activity will show up here.</small>
+        </div>
+    </article>
+    <article id="layout-art4">
+        <div class="empty">
+            <span class="icon cog"></span>
+            <strong>Settings Empty</strong>
+            <small>When you back a project or follow a friend, their activity will show up here.</small>
+        </div>
+    </article>
 
     <footer>
         <nav>
-            <a href="#" data-view-article="layout-art1" data-icon="home" class="active"></a>
+            <a href="#" data-view-article="layout-art1" data-icon="user" class="active"></a>
             <a href="#" data-view-article="layout-art2" data-icon="inbox" data-count="80"></a>
             <a href="#" data-view-article="layout-art3" data-icon="comments"></a>
             <a href="#" data-view-article="layout-art4" data-icon="cog"></a>
