Change Markup example

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -10,6 +10,7 @@
             <!-- Basic Layout -->
             <li data-view-article="main-article" data-title="Lungo Framework">
                 <strong>Meet the framework</strong>
+                <small>Real Cross-Device</small>
             </li>
 
             <!-- Layout & Navigation -->
@@ -25,7 +26,7 @@
             </li>
 
             <!-- Forms -->
-            <li data-view-section="form" data-async="app/sections/form.html">
+            <li data-view-section="form">
                 <div class="tag right">8</div>
                 <strong>Form Elements</strong>
             </li>
